# AutoML-Solution

./: Decision Tree_model.pkl  README.md  SVM_model.pkl  app.py  app_backup.py  app_with_gradient.py  main_file.py  model_definations.py  preprocessing_hackathon.py  preprocessor.pkl  pyproject.toml  requirements.txt  run.py  temp_data.csv
.streamlit/: config.toml
models/: SVM_model.pkl  preprocessor.pkl
src/config/: model_configs.py
src/core/: data_processor.py  model_trainer.py
src/ui/: streamlit_app.py
