[project]
name = "AutoML-solution"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.0",
    "xgboost>=3.0.2",
]

[tool.pyright]
reportMissingTypeStubs = false
reportOptionalSubscript= false
reportOptionalMemberAccess= false
reportGeneralTypeIssues= "warning"
reportOptionalIterable= false
reportOptionalContextManager= false
